# ske-bdd-taws-demonstrator

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  channels.xml  config.mk  flake.nix  module.xml  p_monitor.xml  p_taws.xml  p_tester.xml  schedules.xml
.github/workflows/: rust.yml
p_monitor/: Cargo.toml
p_monitor/src/: lib.rs
p_taws/: Cargo.toml
p_taws/.cargo/: config
p_taws/src/: lib.rs
p_tester/: Cargo.toml
p_tester/src/: lib.rs  tester.rs
rtlola/: spec.lola
