[package]
name = "p_monitor"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xng-rs = { git = "https://github.com/aeronautical-informatics/xng-rs", branch = "main" }
postcard = "0.5"
opentaws = { git = "https://github.com/aeronautical-informatics/openTAWS", branch = "main" }
p_taws = { path = "../p_taws" }

serde = { version = "1.0", default-features = false, features = ["derive"]}
rtlola-frontend = "0"
rtlola-interpreter = "0"
ordered-float = "1"

[lib]
crate-type = [ "rlib", "staticlib" ]
