[package]
name = "p_taws"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xng-rs = { git = "https://github.com/aeronautical-informatics/xng-rs", branch = "main" }
postcard = "1"
opentaws = { git = "https://github.com/aeronautical-informatics/openTAWS", branch = "main" }

serde = { version = "1.0", default-features = false, features = ["derive"]}

[lib]
crate-type = [ "rlib", "staticlib" ]
