[package]
name = "p_tester"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xng-rs = { git = "https://github.com/aeronautical-informatics/xng-rs", branch = "main" }
postcard = "0.5"
opentaws = { git = "https://github.com/aeronautical-informatics/openTAWS", branch = "main" }
p_taws = { path = "../p_taws" }

# Cucumber test framework deps
arbitrary = { version = "1", features = ["derive"]}
async-trait = { version = "0.1"}
cucumber = { package = "cucumber_rust", version = "0.8"}
futures = { version = "0"}
lazy_static = { version = "1.4"}
rand = { version = "*"}
rand_pcg = { version = "*"}
uom = { version = "*", features = [ "f64", "si", "std", "use_serde" ]}

[lib]
crate-type = [ "staticlib" ]
